# tika-python

./: .coverage  .gitignore  Makefile  README.md  download_tika.py  notebook.ipynb  pyproject.toml  pytest-coverage.txt  pytest.xml
.github/workflows/: coverage.yml  documentation.yml  update-readme-coverage.yml
docs/source/: conf.py  index.rst  modules.rst  test.rst  tika.rst
java-stubs/util/: __init__.pyi
org-stubs/: __init__.pyi
org-stubs/apache/: __init__.pyi
org-stubs/apache/tika/: __init__.pyi
org-stubs/apache/tika/async_/: __init__.pyi
org-stubs/apache/tika/async_/cli/: __init__.pyi
org-stubs/apache/tika/batch/: __init__.pyi
org-stubs/apache/tika/batch/builders/: __init__.pyi
org-stubs/apache/tika/batch/fs/: __init__.pyi
org-stubs/apache/tika/cli/: __init__.pyi
org-stubs/apache/tika/concurrent/: __init__.pyi
org-stubs/apache/tika/config/: __init__.pyi
org-stubs/apache/tika/detect/: __init__.pyi
org-stubs/apache/tika/detect/apple/: __init__.pyi
org-stubs/apache/tika/detect/gzip/: __init__.pyi
org-stubs/apache/tika/detect/microsoft/: __init__.pyi
org-stubs/apache/tika/detect/ole/: __init__.pyi
org-stubs/apache/tika/detect/zip/: __init__.pyi
org-stubs/apache/tika/embedder/: __init__.pyi
org-stubs/apache/tika/exception/: __init__.pyi
org-stubs/apache/tika/extractor/: __init__.pyi
org-stubs/apache/tika/extractor/microsoft/: __init__.pyi
org-stubs/apache/tika/fork/: __init__.pyi
org-stubs/apache/tika/gui/: __init__.pyi
org-stubs/apache/tika/io/: __init__.pyi
org-stubs/apache/tika/langdetect/: __init__.pyi
org-stubs/apache/tika/langdetect/optimaize/: __init__.pyi
org-stubs/apache/tika/language/: __init__.pyi
org-stubs/apache/tika/language/detect/: __init__.pyi
org-stubs/apache/tika/language/translate/: __init__.pyi
org-stubs/apache/tika/metadata/: __init__.pyi
org-stubs/apache/tika/metadata/filter/: __init__.pyi
org-stubs/apache/tika/metadata/writefilter/: __init__.pyi
org-stubs/apache/tika/mime/: __init__.pyi
org-stubs/apache/tika/parser/: __init__.pyi
org-stubs/apache/tika/parser/apple/: __init__.pyi
org-stubs/apache/tika/parser/asm/: __init__.pyi
org-stubs/apache/tika/parser/audio/: __init__.pyi
org-stubs/apache/tika/parser/code/: __init__.pyi
org-stubs/apache/tika/parser/crypto/: __init__.pyi
org-stubs/apache/tika/parser/csv/: __init__.pyi
org-stubs/apache/tika/parser/dbf/: __init__.pyi
org-stubs/apache/tika/parser/dgn/: __init__.pyi
org-stubs/apache/tika/parser/dif/: __init__.pyi
org-stubs/apache/tika/parser/digest/: __init__.pyi
org-stubs/apache/tika/parser/digestutils/: __init__.pyi
org-stubs/apache/tika/parser/dwg/: __init__.pyi
org-stubs/apache/tika/parser/epub/: __init__.pyi
org-stubs/apache/tika/parser/executable/: __init__.pyi
org-stubs/apache/tika/parser/external2/: __init__.pyi
org-stubs/apache/tika/parser/feed/: __init__.pyi
org-stubs/apache/tika/parser/font/: __init__.pyi
org-stubs/apache/tika/parser/html/: __init__.pyi
org-stubs/apache/tika/parser/http/: __init__.pyi
org-stubs/apache/tika/parser/hwp/: __init__.pyi
org-stubs/apache/tika/parser/image/: __init__.pyi
org-stubs/apache/tika/parser/indesign/: __init__.pyi
org-stubs/apache/tika/parser/iptc/: __init__.pyi
org-stubs/apache/tika/parser/iwork/: __init__.pyi
org-stubs/apache/tika/parser/mail/: __init__.pyi
org-stubs/apache/tika/parser/mailcommons/: __init__.pyi
org-stubs/apache/tika/parser/mat/: __init__.pyi
org-stubs/apache/tika/parser/mbox/: __init__.pyi
org-stubs/apache/tika/pipes/: __init__.pyi
org-stubs/apache/tika/renderer/: __init__.pyi
org-stubs/apache/tika/sax/: __init__.pyi
org-stubs/apache/tika/serialization/: __init__.pyi
org-stubs/apache/tika/util/: __init__.pyi
org-stubs/apache/tika/utils/: __init__.pyi
org-stubs/apache/tika/xmp/: __init__.pyi
org-stubs/apache/tika/zip/: __init__.pyi
reports/: coverage.xml  safety_scan.html
reports/junit/: junit.xml  report.html
src/tika/: __init__.py  config.py  core.py  detector.py  hashing.py  language.py  parser.py  tika.py  translate.py  unpack.py
test/: memory_benchmark.py  test_benchmark.py  test_core.py  test_detector.py  test_from_file_service.py  test_language.py  test_memory_benchmark.py  test_params.py  test_ssl_link.py  test_tika.py  tests_params.py  tests_unpack.py  unpack.py  utils.py
test/arguments/: test_remote_content.csv
tests/: memory_benchmark.py  test_benchmark.py  test_from_file_service.py  test_ssl_link.py  test_tika.py  tests_unpack.py  utils.py
(+74 files in other folders)
