[project]
name = "tika-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Nick Baughman", email = "baughmann1@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0.2", "requests>=2.32.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/tika"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-coveralls>=2.9.3",
]
