[project]
name = "tika-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Nick Baughman", email = "baughmann1@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "orjson>=3.10.15",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tika"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/**/*.jar"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
markers = ["benchmark: mark a test as a benchmark"]

[tool.coverage.run]
relative_files = true

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]
