[project]
name = "tika-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Nick Baughman", email = "baughmann1@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jpype1>=1.5.1",
    "orjson>=3.10.15",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tika"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/**/*.jar"]

[tool.pylance]
python.analysis.stubPath = "./stubs"

[tool.pyright]
stubPath = "./stubs"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
markers = ["benchmark: mark a test as a benchmark"]
asyncio_mode = "auto"

[tool.coverage.run]
relative_files = true

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
    "genbadge[all]>=1.1.1",
    "pytest-html>=4.1.1",
    "safety>=3.2.14",
    "sphinx>=8.1.3",
    "myst-parser>=4.0.0",
    "sphinxawesome-theme>=5.3.2",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinx-sitemap>=2.6.0",
    "sphinx-togglebutton>=0.3.2",
    "sphinxemoji>=0.3.1",
    "sphinx-tabs>=3.4.7",
    "sphinx-autodoc-defaultargs>=0.1.2",
    "sphinx-git>=11.0.0",
    "pytest-asyncio>=0.25.2",
    "ipykernel>=6.29.5",
    "stubgenj>=0.2.12",
    "mypy>=1.14.1",
    "genson>=1.3.0",
    "datamodel-code-generator>=0.26.5",
]

[tool.isort]
force-single-line = true
lines-between-types = 1
force-alphabetical-sort-within-sections = true
multi_line_output = 3
include_trailing_comma = true


[tool.ruff.lint]
extend-select = [
    "TCH", # typecheck
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C",   # flake8-cognitive-complexity
    "A",   # flake8-builtins
    "FBT", # flake8-boolean-trap
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ERA", # eradicate
    "ICN", # flake8-import-conventions
    "PT",  # flake8-pytest-style
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
    "INP", # flake8-no-pep420
    "RSE", # flake8-raise
    "EM",  # flake8-errmsg
    "T10", # flake8-debugger
    "BLE", # flake8-blind-except
    "S",   # flake8-bandit
    "ISC", # flake8-implicit-str-concat
    "C90", # mccabe
    "ANN", # typing-annotations
]
extend-ignore = [
    "ISC001", # Implicit string concatenation -- needed to disable for ruff formatter
]

[tool.ruff]
line-length = 120
show-fixes = true
src = ["src", "tests"]
exclude = ["development/notebooks"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ANN", "S"]

[tool.ruff.lint.pydocstyle]
convention = "google"
